Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2012-11-14 12:43:28 America/New_York
  - escape [ in append and prepend magic so that csh on Solaris is happy.

0.04      2012-11-13 02:41:59 EST5EDT
  - test against 44bsd-csh, if found in PATH, non "t" csh on FreeBSD
  - fix warnings on older Perls

0.03      2012-10-28 07:44:41 EST5EDT
  - fix doco to remove bashism when referring to bourne shell.

0.02      2012-10-26 07:53:58 EST5EDT
  - use [ $?X = instead of [ $?X == because GNU [ works differently

0.01      2012-10-25 15:30:44 America/New_York
  - initial version